--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 					</p>
 					<!-- EDIT: phone number -->
 					<p><t>Phone</t><br/>
-						<a href="tel:7351984119" class="tel">+91 735 198 4119</a> <br/>
+						<a href="tel:" class="tel"></a> <br/>
 					</p>
 				</div>
 				<div class="col-lg-3">
